refactor: Rename classes and update validation result references for consistency